{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 16,
  "lineage": "bf340a68-5a51-c4d3-0494-433c965858f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "create_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:internet-gateway/igw-01c25cb2f5a2febaf",
            "id": "igw-01c25cb2f5a2febaf",
            "owner_id": "194729441513",
            "tags": {
              "Name": "proper noun_IGW"
            },
            "tags_all": {
              "Name": "proper noun_IGW"
            },
            "vpc_id": "vpc-09db680bc138000ed"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "create_pri_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:route-table/rtb-0e4fbe9f7373cff38",
            "id": "rtb-0e4fbe9f7373cff38",
            "owner_id": "194729441513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "proper noun-private-route"
            },
            "tags_all": {
              "Name": "proper noun-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-09db680bc138000ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "create_pub_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:route-table/rtb-01175ef224379ff49",
            "id": "rtb-01175ef224379ff49",
            "owner_id": "194729441513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c25cb2f5a2febaf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "proper noun_public_route"
            },
            "tags_all": {
              "Name": "proper noun_public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-09db680bc138000ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "create_pri_RTAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0949ca2c3d05488f1",
            "route_table_id": "rtb-0e4fbe9f7373cff38",
            "subnet_id": "subnet-040db5fc38acf69a7"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "create_pub_RTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05be664d1cdf16853",
            "route_table_id": "rtb-01175ef224379ff49",
            "subnet_id": "subnet-0295ce434cbae9267"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_pri_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:security-group/sg-0c84bcfe4b05afe8b",
            "description": "proper noun_pri_SG",
            "egress": [],
            "id": "sg-0c84bcfe4b05afe8b",
            "ingress": [],
            "name": "proper noun_pri_SG",
            "name_prefix": "",
            "owner_id": "194729441513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proper noun_pri_SG"
            },
            "tags_all": {
              "Name": "proper noun_pri_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09db680bc138000ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_pub_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:security-group/sg-0e4d547c684e00909",
            "description": "proper noun_pub_SG",
            "egress": [],
            "id": "sg-0e4d547c684e00909",
            "ingress": [],
            "name": "create_pub_SG",
            "name_prefix": "",
            "owner_id": "194729441513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proper noun_pub_SG"
            },
            "tags_all": {
              "Name": "proper noun_pub_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09db680bc138000ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pri_SGRulesRDSegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2584361927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c84bcfe4b05afe8b",
            "self": false,
            "source_security_group_id": "sg-0e4d547c684e00909",
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pri_SG",
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pri_SGRulesRDSingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-878008468",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c84bcfe4b05afe8b",
            "self": false,
            "source_security_group_id": "sg-0e4d547c684e00909",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pri_SG",
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pub_SGRulesALLegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2693430608",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e4d547c684e00909",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pub_SGRulesHTTPingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3965103678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e4d547c684e00909",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pub_SGRulesSSHingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1524429707",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e4d547c684e00909",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-040db5fc38acf69a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040db5fc38acf69a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proper noun-private-subnet"
            },
            "tags_all": {
              "Name": "proper noun-private-subnet"
            },
            "vpc_id": "vpc-09db680bc138000ed"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-0295ce434cbae9267",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.5.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0295ce434cbae9267",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proper noun-public-subnet"
            },
            "tags_all": {
              "Name": "proper noun-public-subnet"
            },
            "vpc_id": "vpc-09db680bc138000ed"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "create_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:vpc/vpc-09db680bc138000ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-08f9d01456487c6c4",
            "default_route_table_id": "rtb-03f61594beb3700b7",
            "default_security_group_id": "sg-002f8d3130abd9a19",
            "dhcp_options_id": "dopt-0772b700676ea6fcf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09db680bc138000ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f61594beb3700b7",
            "owner_id": "194729441513",
            "tags": {
              "Name": "proper noun-vpc"
            },
            "tags_all": {
              "Name": "proper noun-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}